--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,5 +19,11 @@
 		"svelte-check": "^4.0.0",
 		"typescript": "^5.0.0",
 		"vite": "^7.0.4"
+	},
+	"dependencies": {
+		"@felte/reporter-svelte": "^1.2.0",
+		"@felte/validator-zod": "^1.0.18",
+		"felte": "^1.3.0",
+		"zod": "^3.25.76"
 	}
 }
