add email sender

--- a/backend/rest_api/.env
+++ b/backend/rest_api/.env
@@ -5,3 +5,6 @@ POSTGRES_PORT=5432
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 POSTGRES_DB=CryptoWallet
+
+MAILJET_API_KEY=65e0fb368e0be427a09c8145d6f34e0a
+MAILJET_SECRET_KEY=d5394ec57f8252164293a0f177c34509
