--- a/backend/rest_api/pyproject.toml
+++ b/backend/rest_api/pyproject.toml
@@ -20,7 +20,8 @@ dependencies = [
     "asyncpg (>=0.30.0,<0.31.0)",
     "psycopg2-binary (>=2.9.10,<3.0.0)",
     "python-dotenv (>=1.1.1,<2.0.0)",
-    "uvicorn (>=0.37.0,<0.38.0)"
+    "uvicorn (>=0.37.0,<0.38.0)",
+    "jinja2 (>=3.1.6,<4.0.0)"
 ]
 
 
