switch from json to form data for user profile update. Add avatar upload

--- a/backend/rest_api/pyproject.toml
+++ b/backend/rest_api/pyproject.toml
@@ -22,7 +22,9 @@ dependencies = [
     "psycopg2-binary (>=2.9.10,<3.0.0)",
     "python-dotenv (>=1.1.1,<2.0.0)",
     "uvicorn (>=0.37.0,<0.38.0)",
-    "jinja2 (>=3.1.6,<4.0.0)"
+    "jinja2 (>=3.1.6,<4.0.0)",
+    "python-multipart (>=0.0.20,<0.0.21)",
+    "boto3 (>=1.40.52,<2.0.0)"
 ]
 
 [tool.poetry]
