--- a/backend/rest_api/pyproject.toml
+++ b/backend/rest_api/pyproject.toml
@@ -24,7 +24,8 @@ dependencies = [
     "uvicorn (>=0.37.0,<0.38.0)",
     "jinja2 (>=3.1.6,<4.0.0)",
     "python-multipart (>=0.0.20,<0.0.21)",
-    "boto3 (>=1.40.52,<2.0.0)"
+    "boto3 (>=1.40.52,<2.0.0)",
+    "cryptography (>=46.0.3,<47.0.0)"
 ]
 
 [tool.poetry]
