--- a/backend/rest_api/pyproject.toml
+++ b/backend/rest_api/pyproject.toml
@@ -7,7 +7,7 @@ authors = [
 ]
 
 readme = "README.md"
-requires-python = ">=3.12"
+requires-python = ">=3.12,<4"
 dependencies = [
     "pydantic[email] (>=2.11.9,<3.0.0)",
     "pyjwt[crypto] (>=2.10.1,<3.0.0)",
@@ -25,7 +25,8 @@ dependencies = [
     "jinja2 (>=3.1.6,<4.0.0)",
     "python-multipart (>=0.0.20,<0.0.21)",
     "boto3 (>=1.40.52,<2.0.0)",
-    "cryptography (>=46.0.3,<47.0.0)"
+    "cryptography (>=46.0.3,<47.0.0)",
+    "faststream[rabbit] (>=0.6.2,<0.7.0)"
 ]
 
 [tool.poetry]
