update .env examples

--- a/backend/rest_api/.env.example
+++ b/backend/rest_api/.env.example
@@ -1,6 +1,7 @@
-FRONTEND_URL=
+FRONTEND_URL
 
 PASSWORD_PEPPER=
+AES_SECRET_KEY=
 
 POSTGRES_HOST=
 POSTGRES_PORT=
@@ -15,3 +16,10 @@ S3_SPACE_NAME=
 S3_SPACE_REGION=
 S3_ACCESS_KEY=
 S3_SECRET_KEY=
+S3_BASE_FILE_URL=
+
+RABBITMQ_HOST=
+RABBITMQ_PORT=
+RABBITMQ_USER=
+RABBITMQ_PASSWORD=
+RABBITMQ_VHOST=
