--- a/backend/ethereum/pyproject.toml
+++ b/backend/ethereum/pyproject.toml
@@ -13,6 +13,7 @@ web3 = ">=7.14.0,<8.0.0"
 httpx = ">=0.28.1,<0.29.0"
 faststream = { version = ">=0.6.1,<0.7.0", extras = ["cli", "rabbit"] }
 dishka = ">=1.7.2,<2.0.0"
+redis = "^7.0.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
