--- a/backend/rest_api/pyproject.toml
+++ b/backend/rest_api/pyproject.toml
@@ -25,6 +25,8 @@ python-multipart = ">=0.0.20,<0.0.21"
 boto3 = ">=1.40.52,<2.0.0"
 cryptography = ">=46.0.3,<47.0.0"
 faststream = { version = ">=0.6.2,<0.7.0", extras = ["rabbit"] }
+slowapi = "^0.1.9"
+redis = "^7.0.1"
 
 [tool.poetry.dev-dependencies]
 # додай сюди потрібні dev-залежності, наприклад:
