--- a/backend/rest_api/pyproject.toml
+++ b/backend/rest_api/pyproject.toml
@@ -28,6 +28,7 @@ faststream = { version = ">=0.6.2,<0.7.0", extras = ["rabbit"] }
 slowapi = "^0.1.9"
 redis = "^6.0.0"
 taskiq-redis = "^1.1.2"
+click = "^8.3.1"
 
 [tool.poetry.dev-dependencies]
 # додай сюди потрібні dev-залежності, наприклад:
