remove unique constraint for username

--- a/backend/rest_api/Makefile
+++ b/backend/rest_api/Makefile
@@ -16,5 +16,5 @@ ifndef name
 	$(error You must provide a migration name, e.g., make migration name="add_users_table")
 endif
 	poetry run alembic revision --autogenerate -m "$(name)"
-migrate:
+upgrade:
 	poetry run alembic upgrade head
