--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,9 @@
 		"@felte/reporter-svelte": "^1.2.0",
 		"@felte/validator-zod": "^1.0.18",
 		"felte": "^1.3.0",
+		"svelte-loading-spinners": "^0.3.6",
+		"svelte-sonner": "^1.0.6",
+		"uninstall": "^0.0.0",
 		"zod": "^3.25.76"
 	}
 }
