--- a/backend/sockets/pyproject.toml
+++ b/backend/sockets/pyproject.toml
@@ -14,8 +14,10 @@ dependencies = [
     "pymongo (>=4.15.4,<5.0.0)",
     "dotenv (>=0.9.9,<0.10.0)",
     "pydantic (>=2.12.4,<3.0.0)",
-    "python-socketio (>=5.15.0,<6.0.0)",
-    "boto3 (>=1.41.2,<2.0.0)"
+    "python-socketio[asyncio] (>=5.15.0,<6.0.0)",
+    "boto3 (>=1.41.2,<2.0.0)",
+    "pyjwt (>=2.10.1,<3.0.0)",
+    "aiohttp (>=3.13.2,<4.0.0)"
 ]
 
 
