--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
 		"felte": "^1.3.0",
 		"socket.io-client": "^4.8.1",
 		"svelte-loading-spinners": "^0.3.6",
+		"svelte-modals": "^2.0.1",
 		"svelte-sonner": "^1.0.6",
 		"uninstall": "^0.0.0",
 		"zod": "^3.25.76"
