--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,12 +23,14 @@
 	"dependencies": {
 		"@felte/reporter-svelte": "^1.2.0",
 		"@felte/validator-zod": "^1.0.18",
+		"@svar-ui/svelte-core": "^2.3.1",
+		"@svar-ui/svelte-grid": "^2.3.0",
 		"felte": "^1.3.0",
+		"qs": "^6.14.0",
 		"socket.io-client": "^4.8.1",
 		"svelte-loading-spinners": "^0.3.6",
 		"svelte-modals": "^2.0.1",
 		"svelte-sonner": "^1.0.6",
-		"uninstall": "^0.0.0",
 		"zod": "^3.25.76"
 	}
 }
