--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
 		"@sveltejs/adapter-auto": "^6.0.0",
 		"@sveltejs/kit": "^2.22.0",
 		"@sveltejs/vite-plugin-svelte": "^6.0.0",
+		"@types/qs": "^6.14.0",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
 		"typescript": "^5.0.0",
@@ -23,8 +24,6 @@
 	"dependencies": {
 		"@felte/reporter-svelte": "^1.2.0",
 		"@felte/validator-zod": "^1.0.18",
-		"@svar-ui/svelte-core": "^2.3.1",
-		"@svar-ui/svelte-grid": "^2.3.0",
 		"felte": "^1.3.0",
 		"qs": "^6.14.0",
 		"socket.io-client": "^4.8.1",
