--- a/backend/ethereum/pyproject.toml
+++ b/backend/ethereum/pyproject.toml
@@ -14,6 +14,7 @@ httpx = ">=0.28.1,<0.29.0"
 faststream = { version = ">=0.6.1,<0.7.0", extras = ["cli", "rabbit"] }
 dishka = ">=1.7.2,<2.0.0"
 redis = "^7.0.0"
+websockets = "^15.0.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
