--- a/backend/rest_api/.env.example
+++ b/backend/rest_api/.env.example
@@ -1,4 +1,4 @@
-FRONTEND_URL
+FRONTEND_URL=
 
 PASSWORD_PEPPER=
 AES_SECRET_KEY=
@@ -23,3 +23,8 @@ RABBITMQ_PORT=
 RABBITMQ_USER=
 RABBITMQ_PASSWORD=
 RABBITMQ_VHOST=
+
+REDIS_HOST=
+REDIS_PORT=
+REDIS_DB=
+REDIS_PASSWORD=
