--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,31 +1,31 @@
-# Етап 1: Збірка (Build)
+# Етап 1: Збірка (Builder)
 FROM node:20-alpine AS builder
 
 WORKDIR /app
 
-# Копіюємо файли залежностей
+# Оголошуємо аргументи збірки (Easypanel передасть їх сюди)
+ARG PUBLIC_BACKEND_URL
+ARG PUBLIC_SOCKET_URL
+ARG PUBLIC_CHAT_URL
+
+# Робимо ці аргументи доступними як змінні оточення для процесу збірки
+ENV PUBLIC_BACKEND_URL=$PUBLIC_BACKEND_URL
+ENV PUBLIC_SOCKET_URL=$PUBLIC_SOCKET_URL
+ENV PUBLIC_CHAT_URL=$PUBLIC_CHAT_URL
+
 COPY package*.json ./
 RUN npm install
 
-# Копіюємо весь код і збираємо проект
 COPY . .
+# Тепер Vite побачить ці змінні і не буде падати
 RUN npm run build
 
 # Етап 2: Запуск (Runner)
 FROM node:20-alpine AS runner
-
 WORKDIR /app
-
-# Копіюємо тільки результат збірки та package.json
 COPY --from=builder /app/build ./build
 COPY --from=builder /app/package*.json ./
-
-# Встановлюємо лише production залежності
 RUN npm ci --omit=dev
-
-# SvelteKit adapter-node за замовчуванням слухає порт 3000
 ENV PORT=3000
 EXPOSE 3000
-
-# Запуск сервера
 CMD ["node", "build"]
