--- a/backend/sockets/pyproject.toml
+++ b/backend/sockets/pyproject.toml
@@ -17,6 +17,7 @@ python-socketio = { version = ">=5.15.0,<6.0.0", extras = ["asyncio"] }
 boto3 = ">=1.41.2,<2.0.0"
 pyjwt = ">=2.10.1,<3.0.0"
 aiohttp = ">=3.13.2,<4.0.0"
+cryptography = "^46.0.3"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
